삭제를 제외한 나머지 부분에 성공